Replace new Double() with Double.valueOf()
Signed-off-by: Tobi Schäfer <interface@p3k.org>